# Scalar-Kalman-Filter

./: README.md
docs/: 1dim_CA_x.ipynb  1dim_CV.ipynb  1dim_CV_x.ipynb  1dim_CV_xv.ipynb  2dim_CV_x.ipynb  2dim_CV_xv.ipynb
docs/.ipynb_checkpoints/: 1dim_CA-checkpoint.ipynb  1dim_CV-checkpoint.ipynb  2dim_CA-checkpoint.ipynb  2dim_CV-checkpoint.ipynb
implementations/1dim_CA/: CMakeLists.txt
implementations/1dim_CV/: CMakeLists.txt
implementations/2dim_CA/: CMakeLists.txt
